KM-1381 content edited & blog page created

--- a/public/page-contact-3.html
+++ b/public/page-contact-3.html
@@ -74,10 +74,10 @@
                                     class="ti-arrow-top-right ms-1"></i></span>
                         </a>
                     </div>
-                    <a class="ms-4 fs-3" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button"
+                    <!-- <a class="ms-4 fs-3" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button"
                         aria-controls="offcanvasExample">
                         <i class="las la-grip-lines"></i>
-                    </a>
+                    </a> -->
                 </div>
             </div>
         </nav>
@@ -96,10 +96,10 @@
                                     class="ti-arrow-top-right ms-1"></i></span>
                         </a>
                     </div>
-                    <a class="ms-4 fs-3" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button"
+                    <!-- <a class="ms-4 fs-3" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button"
                         aria-controls="offcanvasExample">
                         <i class="las la-grip-lines"></i>
-                    </a>
+                    </a> -->
                 </div>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
