--- a/public/services.html
+++ b/public/services.html
@@ -129,9 +129,9 @@
                                     class="ti-arrow-top-right ms-1"></i></span>
                         </a>
                     </div>
-                    <a class="ms-4 fs-3 side_menu_btn d-none d-lg-flex" href="#0">
+                    <!-- <a class="ms-4 fs-3 side_menu_btn d-none d-lg-flex" href="#0">
                         <i class="las la-grip-lines"></i>
-                    </a>
+                    </a> -->
                 </div>
             </div>
         </nav>
@@ -150,10 +150,10 @@
                                     class="ti-arrow-top-right ms-1"></i></span>
                         </a>
                     </div>
-                    <a class="ms-4 fs-3" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button"
+                    <!-- <a class="ms-4 fs-3" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button"
                         aria-controls="offcanvasExample">
                         <i class="las la-grip-lines"></i>
-                    </a>
+                    </a> -->
                 </div>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
