KM-1382 blog pages contents

--- a/public/.html
+++ b/public/.html
@@ -406,22 +406,22 @@
                                         <div class="swiper-container">
                                             <div class="swiper-wrapper">
                                                 <div class="swiper-slide">
-                                                    <a href="./job_history_of_us_workers.html" class="item">
+                                                    <a href="#" class="item">
                                                         <p class="color-666 fsz-12 text-uppercase">previous</p>
-                                                        <h6 class="title">Job history of more than <br> 1.2 million US workers</h6>
+                                                        <h6 class="title">Problem about Social Insurance <br> for
+                                                            Logistic Industry</h6>
                                                     </a>
                                                 </div>
                                                 <div class="swiper-slide">
-                                                    <a href="./the_median_time_for_start-ups.html" class="item">
+                                                    <a href="#" class="item">
                                                         <p class="color-666 fsz-12 text-uppercase">next</p>
-                                                        <h6 class="title">The median time for start-ups <br> 
-                                                            going from Seed to Series</h6>
+                                                        <h6 class="title">How To Optimized Cost <br> for GG Ads?</h6>
                                                     </a>
                                                 </div>
                                                 <div class="swiper-slide">
-                                                    <a href="./the_looming_recession.html" class="item">
+                                                    <a href="#" class="item">
                                                         <p class="color-666 fsz-12 text-uppercase">next</p>
-                                                        <h6 class="title">The looming<br> recession </h6>
+                                                        <h6 class="title">How To Optimized Cost <br> for GG Ads?</h6>
                                                     </a>
                                                 </div>
                                             </div>
@@ -605,22 +605,23 @@
                                 <p class="fw-bold text-uppercase fsz-16 mb-30"> popular posts </p>
                                 <div class="pop-posts mb-60">
                                     <div class="post-card radius-6 bg-fff p-30 mb-15">
-                                        <a href="./job_history_of_us_workers.html" class="fsz-18 fw-bold hover-cyan1"> Job history of more than 1.2 million US workers
-                                        </a>
+                                        <a href="#" class="fsz-18 fw-bold hover-cyan1"> Common Difficulites When
+                                            Finalizing Personal Income Tax </a>
                                         <div class="views color-666 mt-15">
                                             <!-- <i class="ti-pulse me-2"></i> -->
                                             <span>By Abdullah</span>
                                         </div>
                                     </div>
                                     <div class="post-card radius-6 bg-fff p-30 mb-15">
-                                        <a href="./the_looming_recession.html" class="fsz-18 fw-bold hover-cyan1"> The looming recession </a>
+                                        <a href="#" class="fsz-18 fw-bold hover-cyan1"> Schengen Visa Consultation </a>
                                         <div class="views color-666 mt-15">
                                             <!-- <i class="ti-pulse me-2"></i> -->
                                             <span>By Abdullah</span>
                                         </div>
                                     </div>
                                     <div class="post-card radius-6 bg-fff p-30 mb-15">
-                                        <a href="./the_median_time_for_start-ups.html" class="fsz-18 fw-bold hover-cyan1"> The median time for start-ups going from Seed to Series </a>
+                                        <a href="#" class="fsz-18 fw-bold hover-cyan1"> Recruit Aug, 2023: Marketing
+                                            Strategist </a>
                                         <div class="views color-666 mt-15">
                                             <!-- <i class="ti-pulse me-2"></i> -->
                                             <span>By Abdullah</span>
