--- a/public/index.html
+++ b/public/index.html
@@ -645,10 +645,10 @@
         <section class="tc-blog-style3">
             <div class="container">
                 <div class="section_title3 mb-90">
-                    <h2 class="text-white"> we are experts <span class="fw-100"> in the fields </span> </h2>
+                    <h2 class="text-white"> MetaniaoHR Blogs </span> </h2>
                     <div class="d-flex justify-content-between mt-60">
-                        <p class="color-999"> The real experts of the field will provide you with the best strategy to
-                            guide you through your investments. </p>
+                        <!-- <p class="color-999"> The real experts of the field will provide you with the best strategy to
+                            guide you through your investments. </p> -->
                         <!-- <a href="#" class="fsz-14 text-uppercase text-white">see all articles <i
                                 class="ti-arrow-top-right"></i> </a> -->
                     </div>
@@ -684,18 +684,18 @@
                                     </a>
                                     <small> 2 Days ago </small>
                                 </div>
-                                <h3 class="title"> <a href="page-single-post-3.html"> the median time for start-ups going from Seed to Series</a> </h3>
+                                <h3 class="title"> <a href="./the_median_time_for_start-ups.html"> The median time for start-ups going from Seed to Series</a> </h3>
                             </div>
-                            <!-- <div class="blog-card">
+                            <div class="blog-card">
                                 <div class="tags-date">
                                     <a href="#" class="tag-link">
                                         news
                                     </a>
                                     <small> 14 Hours ago </small>
                                 </div>
-                                <h3 class="title"> <a href="page-single-post-3.html"> How To Optimize Cost for GG Ads?
+                                <h3 class="title"> <a href="./the_looming_recession.html"> The looming recession
                                     </a> </h3>
-                            </div> -->
+                            </div>
                         </div>
                         <div class="color-info-news-card wow fadeInUp slow" data-wow-delay="0.2s">
                             <div class="row gx-0">
@@ -707,7 +707,7 @@
                                             </a>
                                             <small> 15 Minutes ago </small>
                                         </div>
-                                        <h4 class="title"> <a href="page-single-post-3.html"> job history of more than 1.2 million US workers </a> </h4>
+                                        <h4 class="title"> <a href="./job_history_of_us_workers.html"> Job history of more than 1.2 million US workers </a> </h4>
                                         <div class="text">
                                             I'd like to share an interesting study from ADP this week! They analyzed the job history[...]
                                         </div>
