--- a/public/the_median_time_for_start-ups.html
+++ b/public/the_median_time_for_start-ups.html
@@ -154,7 +154,7 @@
                         </a>
                         <small> 15 Minutes ago </small>
                     </div>
-                    <h4 class="title"> <a href="#"> Mental Toughness & Leadership </a>
+                    <h4 class="title"> <a href="#">The median time for start-ups going from Seed to Series </a>
                     </h4>
                     <!-- <div class="text">
                         MetanoiaHRcomes with interactive design tools and features that could leave you feeling like
@@ -249,10 +249,9 @@
                                 </div> -->
                                 <p class="info-text mt-40">
                                     <span class="lg-letter">
-                                        L
+                                        W
                                     </span>
-                                    et's talk about mental toughness & leadership : Being a leader of any function at any org is one of the most challenging roles to do...why though? Simply, they're tasked to make tough decisions to net a long-term gain while understanding not everyone will agree with their decision.
-                                </p>
+                                    as reading on Crunchbase today that the median time for start-ups going from Seed to Series A round is 25 months this year, which is up from 21 months last year. All this due to higher interest rates, correction after the pandemic boom in tech investment, and overall economic uncertainty. It's a clear sign of subsequent down rounds, start-ups closing, and VC/PE firms hunting for a flash sale. We've already seen the numerous start-ups closing and companies conducting layoffs.                                </p>
                                 <!-- <h4 class="sub-title sm-content-width mt-40 fw-bold">
                                     Sample Heading
                                 </h4>
@@ -264,8 +263,7 @@
                                     <div class="row">
                                         <div class="col-lg-7">
                                             <p class="info-text">
-                                                Story time: Back in March 2020 (was at <u><a href="https://www.linkedin.com/company/yoppworks/?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_recent_activity_content_view%3BPVjgbOpESlSGMAEj5OzZvQ%3D%3D">YoppWorks</a></u>), we lost almost 90% of our revenue given our clients were mostly in the hospitality industry :/. There was a few of us at the office and our CEO said let's all go for a walk! As we walked, I noticed he paced quickly ahead whilst on calls. I couldn't imagine what was going on in his head, but I could tell he was about to make one of his toughest decisions. From an HR & finance perspective, it was clear that layoffs was on the table and I figured my fate had been decided. However, instead of doing layoffs, our CEO decided to incur losses and focus all the efforts on business development and surely enough, we landed a large Canadian enterprise that saved us (and we kept growing that year and needed to hire). Looking back, this decision required strong mental toughness and leadership (thanks for all that you did Jack Gulas)!
-                                            </p>
+                                                As a start-up enthusiast, it's saddening to see so many promising companies not able to achieve their mission. While there is despair, there is still hope as the IPO market is slowly picking up which will have positive ripple effects for start-ups. If you are a start-up founder navigating these tumultuous waves, I'd love to hear from your experiences and see how I can help!                                            </p>
                                         </div>
                                         <div class="col-lg-5">
                                             <div class="img img-cover th-350 mt-15 radius-6 overflow-hidden">
@@ -277,8 +275,7 @@
                                         </div>
                                         <div class="col-12">
                                             <p class="info-text">
-                                                We're still in the midst of the year(s) of layoffs and it takes extreme mental toughness for any CEO to make these decisions. Sometimes we often blame leaders for "bad decisions", but we're unaware of the positive long-term effects of their decision. However, given we're in the private markets, it's explicit in our employment contracts that our roles can dissolve (it's never personal, it's just business) whether its our decision or the company's.
-                                            </p>
+                                                Still we rise,                                            </p>
                                         </div>
                                     </div>
                                 </div>
@@ -412,10 +409,11 @@
                                                     </a>
                                                 </div>
                                                 <div class="swiper-slide">
-                                                    <a href="./the_median_time_for_start-ups.html" class="item">
+                                                    <a href="./mental_toughness_leadership.html" class="item">
                                                         <p class="color-666 fsz-12 text-uppercase">next</p>
-                                                        <h6 class="title">The median time for start-ups <br> 
-                                                            going from Seed to Series</h6>
+                                                        <h6 class="title">Mental toughness
+                                                            <br> 
+                                                            & leadership</h6>
                                                     </a>
                                                 </div>
                                                 <div class="swiper-slide">
@@ -620,7 +618,8 @@
                                         </div>
                                     </div>
                                     <div class="post-card radius-6 bg-fff p-30 mb-15">
-                                        <a href="./the_median_time_for_start-ups.html" class="fsz-18 fw-bold hover-cyan1"> The median time for start-ups going from Seed to Series </a>
+                                        <a href="./mental_toughness_leadership.html" class="fsz-18 fw-bold hover-cyan1"> Mental toughness
+                                            & leadership </a>
                                         <div class="views color-666 mt-15">
                                             <!-- <i class="ti-pulse me-2"></i> -->
                                             <span>By Abdullah</span>
