--- a/public/job_history_of_us_workers.html
+++ b/public/job_history_of_us_workers.html
@@ -154,7 +154,7 @@
                         </a>
                         <small> 15 Minutes ago </small>
                     </div>
-                    <h4 class="title"> <a href="#"> Mental Toughness & Leadership </a>
+                    <h4 class="title"> <a href="#"> Job history of more than 1.2 million US workers </a>
                     </h4>
                     <!-- <div class="text">
                         MetanoiaHRcomes with interactive design tools and features that could leave you feeling like
@@ -249,10 +249,9 @@
                                 </div> -->
                                 <p class="info-text mt-40">
                                     <span class="lg-letter">
-                                        L
+                                        I
                                     </span>
-                                    et's talk about mental toughness & leadership : Being a leader of any function at any org is one of the most challenging roles to do...why though? Simply, they're tasked to make tough decisions to net a long-term gain while understanding not everyone will agree with their decision.
-                                </p>
+                                    would like to share an interesting study from ADP this week! They analyzed the job history of more than 1.2 million US workers in the past 3 years and found that 29% of people quit their jobs within a month of their first promotion. Why's this? Economists have noted these newly promoted folks are overwhelmed + unsupported in their role and/or have newfound confidence to seek opportunities externally.                                </p>
                                 <!-- <h4 class="sub-title sm-content-width mt-40 fw-bold">
                                     Sample Heading
                                 </h4>
@@ -264,12 +263,11 @@
                                     <div class="row">
                                         <div class="col-lg-7">
                                             <p class="info-text">
-                                                Story time: Back in March 2020 (was at <u><a href="https://www.linkedin.com/company/yoppworks/?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_recent_activity_content_view%3BPVjgbOpESlSGMAEj5OzZvQ%3D%3D">YoppWorks</a></u>), we lost almost 90% of our revenue given our clients were mostly in the hospitality industry :/. There was a few of us at the office and our CEO said let's all go for a walk! As we walked, I noticed he paced quickly ahead whilst on calls. I couldn't imagine what was going on in his head, but I could tell he was about to make one of his toughest decisions. From an HR & finance perspective, it was clear that layoffs was on the table and I figured my fate had been decided. However, instead of doing layoffs, our CEO decided to incur losses and focus all the efforts on business development and surely enough, we landed a large Canadian enterprise that saved us (and we kept growing that year and needed to hire). Looking back, this decision required strong mental toughness and leadership (thanks for all that you did Jack Gulas)!
-                                            </p>
+                                                What does this mean for HR practitioners and managers? From experience, I've seen IC's transition into a leadership role without much support and often make avoidable mistakes. Simply put, HR + managers need to invest their time in building role transitional programs that help bridge the gap for the newly promoted.                                            </p>
                                         </div>
                                         <div class="col-lg-5">
                                             <div class="img img-cover th-350 mt-15 radius-6 overflow-hidden">
-                                                <img src="assets/img/blog/Mental_Toughness_Leadership.jpeg" alt="">
+                                                <img src="assets/img/blog/job_history.jpeg" alt="">
                                             </div>
                                             <!-- <div class="text-center color-999 py-3 fst-italic">
                                                 <span>Images by <a href="#" class="color-000">@tim_arterbury</a></span>
@@ -277,8 +275,7 @@
                                         </div>
                                         <div class="col-12">
                                             <p class="info-text">
-                                                We're still in the midst of the year(s) of layoffs and it takes extreme mental toughness for any CEO to make these decisions. Sometimes we often blame leaders for "bad decisions", but we're unaware of the positive long-term effects of their decision. However, given we're in the private markets, it's explicit in our employment contracts that our roles can dissolve (it's never personal, it's just business) whether its our decision or the company's.
-                                            </p>
+                                                Any other suggestions from my HR peers?                                            </p>
                                         </div>
                                     </div>
                                 </div>
@@ -406,9 +403,9 @@
                                         <div class="swiper-container">
                                             <div class="swiper-wrapper">
                                                 <div class="swiper-slide">
-                                                    <a href="./job_history_of_us_workers.html" class="item">
+                                                    <a href="./mental_toughness_leadership.html" class="item">
                                                         <p class="color-666 fsz-12 text-uppercase">previous</p>
-                                                        <h6 class="title">Job history of more than <br> 1.2 million US workers</h6>
+                                                        <h6 class="title">Mental toughness  <br> & leadership</h6>
                                                     </a>
                                                 </div>
                                                 <div class="swiper-slide">
@@ -605,7 +602,7 @@
                                 <p class="fw-bold text-uppercase fsz-16 mb-30"> popular posts </p>
                                 <div class="pop-posts mb-60">
                                     <div class="post-card radius-6 bg-fff p-30 mb-15">
-                                        <a href="./job_history_of_us_workers.html" class="fsz-18 fw-bold hover-cyan1"> Job history of more than 1.2 million US workers
+                                        <a href="./mental_toughness_leadership.html" class="fsz-18 fw-bold hover-cyan1"> Mental toughness & leadership
                                         </a>
                                         <div class="views color-666 mt-15">
                                             <!-- <i class="ti-pulse me-2"></i> -->
