--- a/public/the_looming_recession.html
+++ b/public/the_looming_recession.html
@@ -154,7 +154,8 @@
                         </a>
                         <small> 15 Minutes ago </small>
                     </div>
-                    <h4 class="title"> <a href="#"> Mental Toughness & Leadership </a>
+                    <h4 class="title"> <a href="#"> The Looming Recession 
+                    </a>
                     </h4>
                     <!-- <div class="text">
                         MetanoiaHRcomes with interactive design tools and features that could leave you feeling like
@@ -249,9 +250,9 @@
                                 </div> -->
                                 <p class="info-text mt-40">
                                     <span class="lg-letter">
-                                        L
+                                        I
                                     </span>
-                                    et's talk about mental toughness & leadership : Being a leader of any function at any org is one of the most challenging roles to do...why though? Simply, they're tasked to make tough decisions to net a long-term gain while understanding not everyone will agree with their decision.
+                                    t seems like everyday on my LinkedIn feed, there's yet another tech company doing layoffs/hiring freezes as they deal with the looming recession (which is tough to read). The tech industry experienced a great boom during the pandemic, but the 'correction' is happening now and it is survival of the fittest. Not too long ago, I was assessing opportunities for my next venture, but I didn't put as much emphasis on financial factors that I now suggest candidates to do:
                                 </p>
                                 <!-- <h4 class="sub-title sm-content-width mt-40 fw-bold">
                                     Sample Heading
@@ -260,16 +261,21 @@
                                     The first, and most obvious, is a noise when you apply the brake pedal. This could
                                     be anything from a grinding sound to a high-pitched screech
                                 </h6> -->
-                                <div class="info-text-img mt-30">
+                                <div class="info-text mt-30">
                                     <div class="row">
                                         <div class="col-lg-7">
-                                            <p class="info-text">
+                                            <!-- <p class="info-text">
                                                 Story time: Back in March 2020 (was at <u><a href="https://www.linkedin.com/company/yoppworks/?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_recent_activity_content_view%3BPVjgbOpESlSGMAEj5OzZvQ%3D%3D">YoppWorks</a></u>), we lost almost 90% of our revenue given our clients were mostly in the hospitality industry :/. There was a few of us at the office and our CEO said let's all go for a walk! As we walked, I noticed he paced quickly ahead whilst on calls. I couldn't imagine what was going on in his head, but I could tell he was about to make one of his toughest decisions. From an HR & finance perspective, it was clear that layoffs was on the table and I figured my fate had been decided. However, instead of doing layoffs, our CEO decided to incur losses and focus all the efforts on business development and surely enough, we landed a large Canadian enterprise that saved us (and we kept growing that year and needed to hire). Looking back, this decision required strong mental toughness and leadership (thanks for all that you did Jack Gulas)!
-                                            </p>
+                                            </p> -->
+                                            <li class="mb-20">Ask companies about their ARR and/or profitability (if they aren't public).</li>
+                                            <li class=" mb-20">Where are they in their rounds of fundraising (e.g. Series A, B, C, etc)? How do they plan to spend their $$?</li>
+                                            <li class=" mb-20">How will they be impacted by inflation or instability in the markets? Are they a "recession proof" business?</li>
+                                            <li class=" mb-20">Many tech companies offer stock as part of total comp. Ask what their game plan is when there is volatility in their stock price?</li>
+                                            <li class=" mb-20">I am sure there's more questions to be asked, so let me know if you have a good one (since I am not a finance person lol)?</li>
                                         </div>
                                         <div class="col-lg-5">
                                             <div class="img img-cover th-350 mt-15 radius-6 overflow-hidden">
-                                                <img src="assets/img/blog/Mental_Toughness_Leadership.jpeg" alt="">
+                                                <img src="assets/img/3d_metal_logo.png" alt="">
                                             </div>
                                             <!-- <div class="text-center color-999 py-3 fst-italic">
                                                 <span>Images by <a href="#" class="color-000">@tim_arterbury</a></span>
@@ -277,8 +283,7 @@
                                         </div>
                                         <div class="col-12">
                                             <p class="info-text">
-                                                We're still in the midst of the year(s) of layoffs and it takes extreme mental toughness for any CEO to make these decisions. Sometimes we often blame leaders for "bad decisions", but we're unaware of the positive long-term effects of their decision. However, given we're in the private markets, it's explicit in our employment contracts that our roles can dissolve (it's never personal, it's just business) whether its our decision or the company's.
-                                            </p>
+                                                Regardless, ensure you are equally passionate about the company's mission or product and it is one that will also pass the test of time.                                            </p>
                                         </div>
                                     </div>
                                 </div>
@@ -419,9 +424,9 @@
                                                     </a>
                                                 </div>
                                                 <div class="swiper-slide">
-                                                    <a href="./the_looming_recession.html" class="item">
+                                                    <a href="./mental_toughness_leadership.html" class="item">
                                                         <p class="color-666 fsz-12 text-uppercase">next</p>
-                                                        <h6 class="title">The looming<br> recession </h6>
+                                                        <h6 class="title">Mental toughness <br> & leadership </h6>
                                                     </a>
                                                 </div>
                                             </div>
@@ -613,7 +618,7 @@
                                         </div>
                                     </div>
                                     <div class="post-card radius-6 bg-fff p-30 mb-15">
-                                        <a href="./the_looming_recession.html" class="fsz-18 fw-bold hover-cyan1"> The looming recession </a>
+                                        <a href="./mental_toughness_leadership.html" class="fsz-18 fw-bold hover-cyan1"> Mental toughness & leadership </a>
                                         <div class="views color-666 mt-15">
                                             <!-- <i class="ti-pulse me-2"></i> -->
                                             <span>By Abdullah</span>
